--- a/editor/src/css/main.css
+++ b/editor/src/css/main.css
@@ -3,3 +3,68 @@
 body {
     margin: 0;
 }
+
+header{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 50px;
+    background-color: #eee;
+}
+header .icono {
+    width: 50px;
+    padding-left: 10px;
+}
+header .seccion-titulo {
+    width: calc(50% - 50px);
+    padding-left: 10px;        
+}
+.seccion-titulo .titulo {
+    font-size: x-large;
+    font-weight: bold;
+}
+header .seccion-acciones{
+    width: 50%;
+    text-align: right;
+    padding: 5px;
+}
+.seccion-titulo input{
+    border: none;
+    outline: none;
+    background-color: #eee;
+    width: calc(100% - 10px);        
+}
+button.accion{
+    border-radius: 5px;
+    height: 40px;
+    font-weight: bold;
+}
+button.disable{
+    filter: opacity(25%);
+    cursor: not-allowed;        
+}
+button.cambio {
+    position: relative;
+}
+button.cambio::after {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0px;
+    border-bottom: 4px solid #f44336;
+    content: "";
+    border-radius: 0 0 3px 3px;
+}
+button.ejecutar {
+    background-color: #198754;
+    color: white;        
+}
+#size {
+    position: fixed;
+    top: 52px;
+    right: 8px;
+    color: black;
+    background: #EEEEEE;
+    border-bottom: grey solid 1px;
+    border-left: grey 1px solid;
+}
